syntax = "proto3";

option go_package = "/pb";

service UserService {
    rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
}

message GetUserByIdRequest {
    int32 userId = 1;
}

message GetUserByIdResponse {
    int32 userId = 1;
    string email = 2;
    string username = 3;
}


